cambio color footer

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </form>
     </section>
 
-    <footer class="bg-dark text-center text-light p-2">
+    <footer class="bg-success text-center text-light p-2">
       <a href="https://www.linkedin.com/in/ivan-gonzalez-a47337167">
       <i class="bi bi-linkedin text-blue fa-2x"></i></a>
       <a href="https://github.com/ivan1029">
